fix: changed spacing

--- a/src/app/side-bar/dashboard/dashboard.component.scss
+++ b/src/app/side-bar/dashboard/dashboard.component.scss
@@ -21,13 +21,10 @@
       color: white;
       background-color: $grey;
       height: 78px;
-      &-icon {
-        margin-right: 12px;
-        margin-left: 16px;
-      }
-      &-description {
-        margin-left: 16px;
-      }
+    }
+
+    &-description {
+      margin-left: 16px;
     }
   }
 }
