--- a/src/app/sub-header/sub-header.component.scss
+++ b/src/app/sub-header/sub-header.component.scss
@@ -5,6 +5,7 @@
   border: 1px solid $black;
   width: 94rem;
   background-color: $floralwhite;
+  margin-top: 8px;
 }
 .p {
   color: $p-light-grey;
